--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-merlot
 title: heksesang's projects
+description: a collection of various complete or incomplete tools or other projects
