--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-merlot
 title: heksesang's projects
-description: incomplete or complete, you find all kinds here
+description: all sorts of interesting stuff
